logs/completegenomicstools.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/CompleteGenomicsTools-0.1.2.dev0.egg-info'...
Listing './lib/python3.5/site-packages/completegenomicstools'...
Compiling './lib/python3.5/site-packages/completegenomicstools/cg_somaticcalls2annovar.py'...
***   File "./lib/python3.5/site-packages/completegenomicstools/cg_somaticcalls2annovar.py", line 18
    print "\t".join([row[5],row[6],
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/completegenomicstools/command.py'...
***   File "./lib/python3.5/site-packages/completegenomicstools/command.py", line 25
    """Encapsulate a callable class.

    Use like so:

    import CommandLineProgram
    class abc(CommandLineProgram)
    

    def __init__(self,name=None):
        if(name is not None):
            self.name=name
        else:
            self.name=self.__class__.__name__
        self.options=[]

    def getOptions(self):
        """Return a list of argparser options"""
                                    

                

                             
                                 
    

                                 
                             
                          
             
                                             
                       

                         
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/completegenomicstools/commands.py'...
***   File "./lib/python3.5/site-packages/completegenomicstools/commands.py", line 121
    print "%s %s %d %d\n%s %s %d %d" % (line[0],line[1].replace('chr','hs'),
                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
